2007-12-05  jverzani  <verzani@csilaptop.Belkin>

	* R/gwindow.R: added in ggroup, groups for
	menu|tool|statusbar. From now on, for consistency, these should be
	added to the top-level window, although in RGtk2 this won't be
	deprecated, as it is used in pmg code.

2007-11-03  John Verzani  <jverzani@gmail.com>

	* R/gwindow.R: added location argument to set initial position

	* R/icons.R: read in icon names from images directory. Just drop
		  new xpm file in images/ directory to add icon

2007-11-01  John Verzani  <jverzani@gmail.com>

	* R/gdroplist.R: Changed so that items can be two-column
		  data.frame. If so, then 2nd column specifies icons to
			  put adjacent to text. For editable they appear
				  on right, on left otherwise.

2007-10-24  John Verzani  <jverzani@gmail.com>

	* R/ggrid.R: fixed filter.fun and [.] <- stuff. Fixed bug with
		  svalue when filtering
	

	* R/ghelp.R: trying to fix help under windows issue, fix
		  filtercolumn not working (why?)
	

2007-10-23  John Verzani  <jverzani@gmail.com>

	* R/gwindow.R: added addHandlerUnrealize to intercept closing by
		  window manager.


2007-10-21  John Verzani  <jverzani@gmail.com>

	* R/gtree.R: Put back in sort feature. Fixed this up. (Hopefully)

2007-10-20  John Verzani  <jverzani@gmail.com>

	* R/gtree.R: took  out sort feature. Ughh. Need to figure out
		  sorting in gtree and put this back.

2007-10-11  John Verzani  <jverzani@gmail.com>

	* R/gfile.R: fixed gfilebrowse to get filter passed along via ...

2007-10-09  John Verzani  <jverzani@gmail.com>

	* R/gtree.R: added ... to update method.

2007-09-24  John Verzani  <jverzani@gmail.com>

	* R/ggrid.R: fixed sorting (thanks Michael), colors only if gdf, 

2007-09-23  John Verzani  <jverzani@gmail.com>

	* R/gtree.R: fixed coltypes issue that gave issue with
		  example. Define column types before adding possible icon information.

2007-09-13  John Verzani  <jverzani@gmail.com>

	* R/gtree.R: fixed issue with offspring and icons
