@@ -1,6 +1,6 @@
 Package: gWidgetsRGtk2
-Version: 0.0-28
-Date: 2007-11-05
+Version: 0.0-29
+Date: 2008-01-22
 Title: Toolkit implementation of gWidgets for RGtk2
 Author: Michael Lawrence, John Verzani
 Maintainer: John Verzani <gwidgetsrgtk@gmail.com>
@@ -10,4 +10,4 @@ Description: Port of gWidgets API to RGtk2
 License: GPL (>= 2)
 URL: http://www.math.csi.cuny.edu/pmg
 LazyLoad: yes
-Packaged: Tue Jan 22 14:10:22 2008; verzani
+Packaged: Wed Jan 23 22:05:08 2008; verzani
